# icondata

./: Cargo.toml  README.md
icondata_ai/: Cargo.toml  README.md
icondata_bi/: Cargo.toml  README.md
icondata_bs/: Cargo.toml  README.md
icondata_cf/: Cargo.toml
icondata_cf/src/: lib.rs
icondata_cg/: Cargo.toml  README.md
icondata_ch/: Cargo.toml  README.md
icondata_fa/: Cargo.toml  README.md
icondata_fi/: Cargo.toml  README.md
icondata_hi/: Cargo.toml  README.md
icondata_im/: Cargo.toml  README.md
icondata_io/: Cargo.toml  README.md
icondata_lu/: Cargo.toml  README.md
icondata_mdi/: Cargo.toml  README.md
icondata_oc/: Cargo.toml  README.md
icondata_ri/: Cargo.toml  README.md
icondata_si/: Cargo.toml  README.md
icondata_tb/: Cargo.toml  README.md
icondata_ti/: Cargo.toml  README.md
icondata_vs/: Cargo.toml  README.md
icondata_wi/: Cargo.toml  README.md
