[package]
name = "icondata_cf"
version = "0.0.10"
authors = ["Tormod H Ongstad"]
edition = "2021"
description = "Library providing SVG and corresponding metadata for \"Country-Flags\"."
readme = "./README.md"
repository = "https://github.com/Carlosted/icondata"
license = "MIT"
keywords = ["icons"]
categories = ["web-programming"]
rust-version = "1.67.0"

[dependencies]
icondata_core = { path = "../icondata_core", version = "0.1.0" }